<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="org.vasanti.www.mycare.MainActivity">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/homepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:label="@string/app_name"
        android:visibility="visible"
        tools:context=".MainActivity"
        tools:layout_constraintEnd_toStartOf="parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <Button
            android:id="@+id/idSignInButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="#895adc"
            android:text="@string/signInBtn"
            android:textColor="@color/White"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/divider4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider4"
            android:layout_width="411dp"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/inputEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idSignInButton" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/prompt_name"
            android:inputType="textAutoComplete"
            android:padding="5dp"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/inputPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail"
            app:layout_constraintVertical_bias="0.852" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/inputEmail"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/inputPhone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.456"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.769" />


        <EditText
            android:id="@+id/inputPhone"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/inputPhone"
            android:inputType="phone"
            android:textSize="18sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/inputPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputEmail" />


        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:textStyle="normal"
            android:typeface="normal"
            app:layout_constraintBottom_toTopOf="@+id/registerButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPhone" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/primaryColor"
            android:text="@string/register"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputPassword" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>